--- a/style.css
+++ b/style.css
@@ -20,18 +20,19 @@ body , html {
     background-color: rgb(253, 247, 247) ;
 }
 
-.header {
+.header{
     position: relative;
-    height : 100vh ; 
+    height : 80vh ; 
     width : 100% ; 
     border-radius: 0px 0px 0px 90px ;
     background-color: var(--light-red);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: white;
-    padding : 0px 40px ;
+    /* padding : 0px 40px ; */
     overflow:hidden;
     z-index: 2;
 }
@@ -42,6 +43,130 @@ body , html {
     background-size: cover;
     /* opacity: 0.3; */
     z-index: -1;
+}
+nav{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    max-height: 80px;
+    padding: 20px;
+    /* background-color: khaki; */
+    display: flex;
+    flex-direction : row ;
+    color: black;
+    
+}
+.logo{
+    color: white;
+    text-decoration: wavy;
+    font-size: 2rem;
+    flex: 1;
+    text-align: start;
+}
+.toggle{
+    flex: 1fr;
+    justify-self: flex-end;
+    align-self: flex-end;
+    cursor: pointer;
+    overflow : hidden ;
+    width: 40px;
+    margin-top: -5px;
+}
+.close {
+    display: none;
+}
+.navigaton-phone{
+    display: none;
+    width: 70%;
+    height: auto;
+    position: absolute;
+    background-color: white;
+    top : 100px ;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3 !important;
+    border-radius: 3px;
+    padding: 20px 15px;
+    transition: width 0.3s ease-in;
+}
+.navigaton-phone div{
+    position: relative;
+    width: 100%;
+    padding : 20px ;
+    margin : 12px auto ;
+}
+.navigaton-phone div:nth-child(3){
+    margin-bottom: 50px;
+}
+.navigaton-phone div label{
+    position: absolute;
+    left:0px;
+    /* background-color: red; */
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    line-height: 40px;    
+}
+#toggle-inner-list-product ,
+#toggle-inner-list-comp,
+#toggle-inner-list-connect{
+    display: none;
+}
+#toggle-inner-list-product:checked ~ .inner-list ,
+#toggle-inner-list-comp:checked  ~ .inner-list ,
+#toggle-inner-list-connect:checked  ~ .inner-list 
+{
+    display: block;
+}
+.inner-list {
+    display: none;  
+    margin-top: 50px;
+    background-color: var(--light-gray);
+    border-radius: 10px;
+    overflow : hidden;
+}
+.inner-list li{
+    position: relative;
+    line-height: 35px;
+    padding : 10px 0px;
+    cursor: pointer;
+    transition: background 0.4s ease;
+}
+.inner-list li a{
+    color: var(--grayish-blue);
+    text-decoration: none;
+}
+.inner-list li:hover{
+    background-color: rgb(241, 241, 241);
+}
+.navigation-footer{
+    border-top: 2px solid rgb(226, 226, 226) ;
+    padding : 20px 10px;
+    display: flex;
+    flex-direction: column;
+}
+.navigation-footer button{
+    margin : 12px auto ;
+    padding: 15px 40px;
+    border : none ;
+    border-radius: 40px;
+    font-weight: bold;
+    font-size: 1rem;
+}
+.navigation-footer button:first-child {
+    background-color: transparent;
+}
+.navigation-footer button:last-child {
+    color: white;
+    background: linear-gradient(90deg,   var(--very-light-red) ,var(--light-red));
+}
+.navigaton-desk{
+    display: none;
+}
+.header_content{
+    justify-self: center;
+
 }
 span.dis-block {
     display: block;
@@ -60,16 +185,25 @@ span.dis-block {
     border : none ;
     font-weight: bold;
     cursor: pointer;
+    transition: all 0.5s ease-in-out;
 }
 .btn-white {
     background-color: white;
-    color : var(--light-red)
+    color : var(--light-red);
+}
+.btn-white:hover{
+    background-color: rgba(255, 255, 255 ,0.2);
+    color: white;
 }
 .btn-transparent{
     border : 2px solid white ;
     background-color:transparent;
     color: white;
     padding : 13px 33px;
+}
+.btn-transparent:hover{
+    background-color: white;
+    color : var(--light-red)
 }
 main{
     margin-top: 100px;
@@ -169,7 +303,7 @@ ul{
         display: flex;
         flex-direction: row;
         padding : 0px 0px;
-        margin : 30% auto 0px ;
+        margin : 10% auto 0px ;
         align-items: center;
     }
     .infor-secion__img{
@@ -208,5 +342,53 @@ ul{
         display: flex;
         flex-direction: row;
 
+    }
+    .navigaton-phone{
+        display: none;
+    }
+    .toggle{
+        display: none;
+    }
+    .logo{
+        flex : 0;
+        padding-right: 50px;
+    }
+    .navigaton-desk{
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        color : white;
+        width : 100%;
+    }
+    .navigaton-desk div:not(:last-child) {
+        margin : auto 12px; 
+    }
+    .navigation-footer{
+        flex-direction: row;
+        border-top : none;
+        margin-right : auto ;
+        flex : 1 ;
+        padding : 0px;
+        justify-content: flex-end;
+        
+    }
+    .navigation-footer button{
+        margin : auto 12px;
+        padding : 10px 20px;
+        font-size: .9rem;
+        font-weight: normal;
+        cursor: pointer;
+    }
+    .navigation-footer button:first-child{
+        color : white;
+    }
+    .navigation-footer button:last-child{
+        background: white;
+        color : var(--light-red);
+        transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .navigation-footer button:last-child:hover{
+        background: rgba(255,255,255,0.2);
+        color : white
     }
 }
